--- a/onlinenotes/templates/onlinenotes/changepass.html
+++ b/onlinenotes/templates/onlinenotes/changepass.html
@@ -52,6 +52,13 @@
             </a>
             
           </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+            <a href="{% url 'createnotes' user.id %}" class="nav-link">
+              <i class="fa fa-fw fa-file" aria-hidden="true"></i>
+              <span class="nav-link-text">Create Notes</span>
+            </a>
+            
+          </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-file"></i>
