--- a/onlinenotes/templates/onlinenotes/createnotes.html
+++ b/onlinenotes/templates/onlinenotes/createnotes.html
@@ -28,10 +28,12 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
+            
             <a class="nav-link" href="{% url 'studashboard' user.id %}">
-              <i class="fa fa-fw fa-dashboard"></i>
-              <span class="nav-link-text">Dashboard</span>
+                <i class="fa fa-fw fa-dashboard"></i>
+                <span class="nav-link-text">Dashboard</span>
             </a>
+
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
             <a class="nav-link" href="{% url 'profile' user.id %}">
@@ -40,11 +42,14 @@
             </a>
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+           
             <a class="nav-link" href="{% url 'stueditprofile' user.id %}">
-              <i class="fa fa-fw fa-table"></i>
-              <span class="nav-link-text">Edit Profile</span>
+                <i class="fa fa-fw fa-table"></i>
+                <span class="nav-link-text">Edit Profile</span>
             </a>
+
           </li>
+
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
             <a href="{% url 'createnotes' user.id %}" class="nav-link">
               <i class="fa fa-fw fa-file" aria-hidden="true"></i>
@@ -52,12 +57,14 @@
             </a>
             
           </li>
+          
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-file"></i>
               <span class="nav-link-text">Notes</span>
             </a>
             <ul class="sidenav-second-level collapse" id="collapseComponents">
+              
                 <li>
                     <a href="{% url 'uploadnotes' user.id %}">Upload Notes</a>
                 </li>
@@ -67,6 +74,7 @@
                 <li>
                     <a href="{% url 'viewmynotes' user.id %}">View My notes</a>
                 </li>
+
             </ul>
           </li>
         </ul>
@@ -100,7 +108,7 @@
           <li class="breadcrumb-item">
             <a href="{% url 'studashboard' user.id %}">Dashboard</a>
           </li>
-          <li class="breadcrumb-item active">Edit Profile</li>
+          <li class="breadcrumb-item active">Profile</li>
         </ol>
         
         <!-- <div class="row">
@@ -116,76 +124,40 @@
 
         <div class="row container">
             <div class="col-md-12">
-                <div class="card" style="width: 60rem; margin:auto;padding: 2% 10% 2% 10%;background-color: rgb(224, 239, 241);">
+                <div class="card" style="width: 120rem; margin:auto;padding: 2% 10% 2% 10%;background-color: rgb(224, 239, 241);">
                     <div class="card-text">
-                        <h1 class="title" align="center" style="color: purple;font-weight: bold;">Edit Profile</h1>
+                        <h1 class="title" align="center" style="color: purple;font-weight: bold;">Create Notes</h1>
                     </div>
-                    <br>
+                   
                     <p style="text-align: center; font-size: 1rem" class="text-primary">{{error_message}}</p>
-                    <br>
+                    
                     <div class="card-body">
-                        <form class="form" method="POST" action="">
-                            {% csrf_token %}
 
-                            <div class="row">
+                        <form method="POST" action="">
+                            {% csrf_token %}
+                            <div class="row">  
                                 <div class="col-md-12 pl-md-1">
                                     <div class="form-group">
-                                        <label for="fname" style="font-weight:bold; font-size: 17px;">First Name: </label>
-                                        <input id="fname" type="text" class="form-control" style="font-size: 15px;" value={{user.first_name}} name="fname" required="required" />
+                                        <label for="title" style="font-weight:bold; font-size: 17px;">Title: </label>
+                                        <input id="title" class="form-control" name="title" style="font-size: 15px;">
                                     </div>
-                                </div>                                
-                                    
-                                <div class="col-md-12 pl-md-1">
-                                    <div class="form-group">
-                                        <label for="lname" style="font-weight:bold; font-size: 17px;">Last Name: </label>
-                                        <input id="lname" type="text" class="form-control" style="font-size: 15px;" value={{user.last_name}} name="lname" required="required" />
-                                    </div>
-                                </div>
+                                </div>                                   
+                            </div>
+    
+                            <div class="row"> 
+                                    <div class="col-md-12 pl-md-1">
+                                        <div class="form-group">
+                                            <label for="description" style="font-weight:bold; font-size: 17px;">Description: </label>
+                                            <textarea rows=10 cols=60 id="description" class="form-control" name="description" style="font-size: 15px;"></textarea>
+                                        </div>
+                                    </div>             
                             </div>
                                 
-
-                            <div class="row">
-                            
-                                <div class="col-md-12 pl-md-1">
-                                    <div class="form-group">
-                                        <label for="contact" style="font-weight:bold; font-size: 17px;">Contact: </label>
-                                        <input id="contact" type="text" class="form-control" style="font-size: 15px;" value={{fm.contact}} name="contact" required="required" />
-                                    </div>
-                                </div> 
-                                                           
-                                <div class="col-md-12 pl-md-1">
-                                    <div class="form-group">
-                                        <label for="email" style="font-weight:bold; font-size: 17px;">Email ID: </label>
-                                        <input id="email" type="email" class="form-control" style="font-size: 15px;" value={{user.email}} name="email" required="required" />
-                                    </div>
-                                </div>
-                                        
-                            </div>
-
-                            
-
-                            <div class="row">
-                                <div class="col-md-12 pl-md-1">
-                                        <div class="form-group">
-                                            <label for="branch" style="font-weight:bold; font-size: 17px;"> Branch: </label>
-                                            <select name="branch" class="form-control" id="branch" style="font-size: 15px;" value={{fm.branch}} required="required">
-                                                <option value="CSE">CSE</option>
-                                                <option value="IT">IT</option>
-                                                <option value="ENTC">ENTC</option>
-                                                <option value="EL">EL</option>
-                                                <option value="CIVIL">CIVIL</option>
-                                                <option value="MECH">MECH</option>
-                                            </select>
-                                        </div>
-                                </div>
-                                    
-                            </div><br>
-
-                            <div>
-                                <button type="submit" class="btn btn-primary btn-lg" style="margin: 0% 30% 0% 40%;">Save Profile</button>
-                            </div>
-
+                            <button type="submit" class="btn btn-primary" style="font-size: 18px;padding: 4px 14px 4px 14px;margin: 0% 30% 0% 42%;">Create</button>
+                        
                         </form>
+                        
+                       
                     </div>
                 </div>
             </div>
