--- a/onlinenotes/templates/onlinenotes/studashboard.html
+++ b/onlinenotes/templates/onlinenotes/studashboard.html
@@ -52,6 +52,13 @@
             </a>
             
           </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+            <a href="{% url 'createnotes' user.id %}" class="nav-link">
+              <i class="fa fa-fw fa-file" aria-hidden="true"></i>
+              <span class="nav-link-text">Create Notes</span>
+            </a>
+            
+          </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-file"></i>
@@ -167,7 +174,20 @@
               </a>
             </div>
           </div>
-          
+          <div class="col-xl-3 col-sm-6 mb-3">
+            <div class="card text-white bg-success o-hidden h-100">
+              <div class="card-body">
+                <div class="card-body-icon">
+                  <i class="fa fa-fw fa-shopping-cart"></i>
+                </div>
+                <div class="mr-5">Created Notes</div>
+              </div>
+              <a class="card-footer text-white clearfix large z-1" href="{% url 'showcreatednotes' user.id %}">
+                <span class="float-left">{{cnt2}}</span>
+                
+              </a>
+            </div>
+          </div>
           
         </div>
        
