--- a/onlinenotes/templates/onlinenotes/changepass.html
+++ b/onlinenotes/templates/onlinenotes/changepass.html
@@ -47,8 +47,15 @@
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
             <a href="{% url 'changepass' user.id %}" class="nav-link collapsed" data-toggle="collapse" data-parent="#exampleAccordion">
-              <i class="fa fa-fw fa-wrench"></i>
+              <i class="fa fa-key" aria-hidden="true"></i>
               <span class="nav-link-text">Change Password</span>
+            </a>
+            
+          </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+            <a href="{% url 'searchbook' %}" class="nav-link">
+              <i class="fa fa-book" aria-hidden="true"></i>
+              <span class="nav-link-text">Search Book</span>
             </a>
             
           </li>
@@ -106,46 +113,14 @@
           </li>
           <li class="breadcrumb-item active">My Dashboard</li>
         </ol>
-        <!-- Icon Cards-->
-        <div class="row">
-          <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-primary o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fa fa-fw fa-comments"></i>
-                </div>
-                <div class="mr-5">All Notes</div>
-              </div>
-              <a class="card-footer text-white clearfix large z-1" href="{% url 'viewallnotes' user.id %}">
-                <span class="float-left">{{cnt}}</span>
-               
-              </a>
-            </div>
-          </div>
-          <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-warning o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fa fa-fw fa-list"></i>
-                </div>
-                <div class="mr-5">My Notes</div>
-              </div>
-              <a class="card-footer text-white clearfix large z-1" href="{% url 'viewmynotes' user.id %}">
-                <span class="float-left">{{cnt1}}</span>
-                
-              </a>
-            </div>
-          </div>
-          
-          
-        </div>
+        
        
         <!-- Example DataTables Card-->
         <div class="card mb-3">
           <div class="card-header">
             <i class="fa fa-table"></i> Change Password</div>
             <p>{{msg}}</p>
-        <div class="card-body" style="padding-left: 20px;">
+        <div class="card-body" style="padding: 2% 0% 2% 5%;">
 
             {% if form.errors %}
             <h1>ERRORRRRRR same email again???</h1>
@@ -157,8 +132,8 @@
                     <div class="row">
                         <div class="col-md-6 pl-md-1">
                           <div class="form-group">
-                              <label for="newpass">New Password: </label>
-                              <input id="newpass" type="text" class="form-control" name="newpass" placeholder="Enter New Password" required="required" />
+                              <label for="newpass" style="font-size: 20px;">New Password: </label>
+                              <input id="newpass" type="text" class="form-control" name="newpass" style="font-size: 15px;" placeholder="Enter New Password" required="required" />
                           </div>
                       </div> 
                     </div>
@@ -166,8 +141,8 @@
                     <div class="row">
                         <div class="col-md-6 pl-md-1">
                             <div class="form-group">
-                                <label for="confpass">Confirm Password: </label>
-                                <input id="confpass" type="text" class="form-control" name="confpass" placeholder="Confirm Password" required="required" />
+                                <label for="confpass" style="font-size: 20px;">Confirm Password: </label>
+                                <input id="confpass" type="text" class="form-control" name="confpass" style="font-size: 15px;" placeholder="Confirm Password" required="required" />
                             </div>
                         </div>                                
                         
@@ -175,7 +150,7 @@
       
                     <br>
                     
-                    <button type="submit" class="btn btn-primary btn-lg" style="margin:auto;">Submit</button>
+                    <button type="submit" class="btn btn-primary btn-lg" style="margin:auto;font-size: 15px;">Submit</button>
                     
             </form>
         </div>
