--- a/onlinenotes/templates/onlinenotes/createnotes.html
+++ b/onlinenotes/templates/onlinenotes/createnotes.html
@@ -49,6 +49,20 @@
             </a>
 
           </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+            <a href="{% url 'changepass' user.id %}" class="nav-link">
+              <i class="fa fa-key" aria-hidden="true"></i>
+              <span class="nav-link-text">Change Password</span>
+            </a>
+            
+          </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+            <a href="{% url 'searchbook' %}" class="nav-link">
+              <i class="fa fa-book" aria-hidden="true"></i>
+              <span class="nav-link-text">Search Book</span>
+            </a>
+            
+          </li>
 
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
             <a href="{% url 'createnotes' user.id %}" class="nav-link">
