--- a/onlinenotes/templates/onlinenotes/searchbook.html
+++ b/onlinenotes/templates/onlinenotes/searchbook.html
@@ -16,7 +16,20 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/admindash.css' %}">
-    <title>Notes</title>
+    <title>Document</title>
+
+    <style>
+      .thumbs {
+        float:left;
+      /*   border: solid 1px #ccc */
+      }
+      .thumbs img{
+        float: left;
+        vertical-align: top;
+        /* margin: 5px 15px 10px 5px */
+      }
+    </style>
+
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <!-- Navigation-->
@@ -28,21 +41,23 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
+           
             <a class="nav-link" href="{% url 'studashboard' user.id %}">
-              <i class="fa fa-fw fa-dashboard"></i>
-              <span class="nav-link-text">Dashboard</span>
+                <i class="fa fa-fw fa-dashboard"></i>
+                <span class="nav-link-text">Dashboard</span>
             </a>
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
             <a class="nav-link" href="{% url 'profile' user.id %}">
-              <i class="fa fa-user" aria-hidden="true"></i>
-              <span class="nav-link-text"> Profile</span>
+              <i class="fa fa-fw fa-area-chart"></i>
+              <span class="nav-link-text">Profile</span>
             </a>
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+           
             <a class="nav-link" href="{% url 'stueditprofile' user.id %}">
-              <i class="fa fa-fw fa-table"></i>
-              <span class="nav-link-text">Edit Profile</span>
+                <i class="fa fa-fw fa-table"></i>
+                <span class="nav-link-text">Edit Profile</span>
             </a>
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
@@ -66,25 +81,26 @@
             </a>
             
           </li>
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
-            <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
+
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+            <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-file"></i>
               <span class="nav-link-text">Notes</span>
             </a>
-            <ul class="sidenav-second-level collapse" id="collapseExamplePages">
-              <li>
-                <a href="{% url 'uploadnotes' user.id %}">Upload Notes</a>
-              </li>
-              <li>
-                <a href="{% url 'viewallnotes' user.id %}">View All Notes</a>
-              </li>
-              <li>
-                <a href="{% url 'viewmynotes' user.id %}">View My notes</a>
-              </li>
+            <ul class="sidenav-second-level collapse" id="collapseComponents">
               
+                <li>
+                    <a href="{% url 'uploadnotes' user.id %}">Upload Notes</a>
+                </li>
+                <li>
+                    <a href="{% url 'viewallnotes' user.id %}">View All Notes</a>
+                </li>
+                <li>
+                    <a href="{% url 'viewmynotes' user.id %}">View My notes</a>
+                </li>
+
             </ul>
           </li>
-          
         </ul>
         <ul class="navbar-nav sidenav-toggler">
           <li class="nav-item">
@@ -95,125 +111,74 @@
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
+            <form class="form-inline my-2 my-lg-0 mr-lg-2" action="{% url 'search' %}" method="get">
+              <div class="input-group">
+                
+              </div>
+            </form>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}" data-toggle="modal" data-target="#exampleModal">
               <i class="fa fa-fw fa-sign-out"></i>Logout</a>
           </li>
         </ul>
       </div>
     </nav>
+
     <div class="content-wrapper">
       <div class="container-fluid">
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
+        {% if user.is_superuser %}
           <li class="breadcrumb-item">
-            <a href="#">Dashboard</a>
+            <a href="{% url 'admindashboard' %}">Dashboard</a>
           </li>
-          <li class="breadcrumb-item active">My Dashboard</li>
+        {% else %}
+          <li class="breadcrumb-item">
+            <a href="{% url 'studashboard' user.id %}">Dashboard</a>
+          </li>
+        {% endif %}
+          <li class="breadcrumb-item active">Profile</li>
         </ol>
-        <!-- Icon Cards-->
-        <div class="row">
-          <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-primary o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fa fa-fw fa-comments"></i>
-                </div>
-                <div class="mr-5">All Notes</div>
-              </div>
-              <a class="card-footer text-white clearfix large z-1" href="{% url 'viewallnotes' user.id %}">
-                <span class="float-left">{{cnt}}</span>
-               
-              </a>
+        
+        <!-- <div class="row">
+            <div class="col-md-6 ml-auto mr-auto">
+              <div class="profile">
+                <div class="avatar">
+                  <img src="{% static 'assets/img/faces/christian1.jpg' %}" alt="Circle Image" class="img-raised rounded-circle img-fluid">
+                  
+                </div>                        
+              </div>                      
             </div>
-          </div>
-          <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-warning o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fa fa-fw fa-list"></i>
+        </div> -->
+
+        <div class="row container">
+            <div class="col-md-12">
+                <div class="card" style="width: 100rem; margin:auto;padding: 2% 1% 2% 1%;">
+                    <div class="card-text">
+                        <h1 class="title" align="center" style="color: purple;font-weight: bold;">Search Books</h1>
+                    </div>
+                  
+                    <p style="text-align: center; font-size: 1rem" class="text-primary">{{error_message}}</p>
+                    <br>
+                    <div class="card-body">
+
+                        <div id="search">
+                          <form id="search_form">
+                            {% csrf_token %}
+                            <input type="text" size="50" id="search_txt" class="form-control" placeholder="Keyword, author, ISBN" style="font-size: 17px;" /><br>
+                            <input type="submit" value="Search Books" class="btn btn-primary" style="font-size: 17px;">
+                          </form>
+                        </div>
+                        <br>
+                        <div id="books"></div>
+                        
+                    </div>
                 </div>
-                <div class="mr-5">My Notes</div>
-              </div>
-              <a class="card-footer text-white clearfix large z-1" href="{% url 'viewmynotes' user.id %}">
-                <span class="float-left">{{cnt1}}</span>
-                
-              </a>
             </div>
-          </div>
-          <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-success o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fa fa-fw fa-shopping-cart"></i>
-                </div>
-                <div class="mr-5">Created Notes</div>
-              </div>
-              <a class="card-footer text-white clearfix large z-1" href="{% url 'showcreatednotes' user.id %}">
-                <span class="float-left">{{cnt2}}</span>
-                
-              </a>
-            </div>
-          </div>
-          
         </div>
        
-        <!-- Example DataTables Card-->
-        <div class="card mb-3">
-          <div class="card-header">
-            <i class="fa fa-table"></i> My Notes</div>
-          <div class="card-body">
-            <div class="table-responsive">
-              <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                <thead>
-                    <tr>
-                      <th>Sr. No</th>
-                      <th>Email</th>
-                      <th>Date</th>
-                      <th>Branch</th>
-                      <th>Subject</th>
-                      <th>Download Notes</th>
-                      <th>File Type</th>
-                      <th>Status</th>
-                      <th>Description</th>
-                    </tr>
-                  </thead>
-                  <tfoot>
-                    <tr>
-                      <th>Sr. No</th>
-                      <th>Email</th>
-                      <th>Date</th>
-                      <th>Branch</th>
-                      <th>Subject</th>
-                      <th>Download Notes</th>
-                      <th>File Type</th>
-                      <th>Status</th>
-                      <th>Description</th>
-                    </tr>
-                  </tfoot>
-                  <tbody>
-  
-                    {% for i in mynote %}
-  
-                      <tr>
-                        <td>{{forloop.counter}}</td>
-                        <td>{{i.user.email}}</td>
-                        <td>{{i.date}}</td>
-                        <td>{{i.branch}}</td>
-                        <td>{{i.subject}}</td>
-                        <td><a href="{{ i.uploadingnotes.url }}">{{ i.uploadingnotes }}</a></td>
-                        <td>{{i.filetype}}</td>
-                        <td>{{i.status}}</td>
-                        <td>{{i.description}}</td>
-                      </tr>
-
-                    {% endfor %}
-
-              </table>
-            </div>
-          </div>
-          <div class="card-footer small text-muted"></div>
-        </div>
-      </div>
+    </div>
       <!-- /.container-fluid-->
       <!-- /.content-wrapper-->
       <footer class="sticky-footer">
@@ -246,6 +211,96 @@
         </div>
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    
+    <script>
+
+        $("#search_form").submit(function(e) {
+          $("#books").html("");
+
+          e.preventDefault();
+
+          var searchQuery = $("#search_txt").val();
+          searchQuery = searchQuery.split(" ").join("+");
+
+          if (!searchQuery) {
+            searchQuery = "paleo";
+          }
+
+          $.ajax({
+            url: "https://www.googleapis.com/books/v1/volumes?q=" + searchQuery,
+            success: function(json) {
+              var htmlcontent = "";
+              var thumb = "";
+              var author = "";
+              var description = "";
+              var isbn = "";
+              var previewlink = ""
+
+              for (i = 0; i < json.items.length; i++) {
+              
+                if (typeof json.items[i].volumeInfo.imageLinks != "undefined") {
+                  thumb = json.items[i].volumeInfo.imageLinks.smallThumbnail;
+                } else {
+                  thumb = "http://i.imgur.com/oM3MdAi.png";
+                  //thumb = 'http://slems-oldboys.org.uk/library/wp-content/uploads/2013/11/library_nocover.jpg'
+                }
+                // AUTHOR
+                if (typeof json.items[i].volumeInfo.authors != "undefined") {
+                  author = json.items[i].volumeInfo.authors[0];
+                }
+                
+                if (typeof json.items[i].volumeInfo.authors != "undefined") {
+                  previewlink = json.items[i].volumeInfo.previewLink
+                }
+                    // AUTHOR
+                // if (typeof json.items[i].volumeInfo.description != "undefined") {
+                //   description = json.items[i].volumeInfo.description;
+                // }
+                
+                if (typeof json.items[i].volumeInfo.industryIdentifiers != "undefined") {
+                  isbn = json.items[i].volumeInfo.industryIdentifiers[0].identifier;
+                }
+
+                htmlcontent +=
+                  "<div class='thumbs' style='margin:10px 40px 10px 20px;height:250px;width:40%;'><b>Title:</b> " +
+                  json.items[i].volumeInfo.title +
+                  "</b> " +
+                  '<img src="' +
+                  thumb +
+                  '" + alt="' +
+                  json.items[i].volumeInfo.title +
+                  '">' +
+                  "<br><b>Author: </b>" +
+                  author +
+                  "<br><b>ISBN_13: </b>" +
+                  isbn +
+                  "<br><br>" +
+                  '<a href="' + previewlink + '"><b>View Book</b></a> ' +
+                  // trunc(description, 400) +
+                  "</div>";
+              }
+              document.getElementById("books").innerHTML =
+                "<div>" + htmlcontent + "</div><br>";
+            }
+          });
+        });
+
+        function trunc(s, n) {
+          //if(typeof s !== "undefined"){
+          var t = s.indexOf(" ", n);
+          if (t == -1) return s;
+          return s.substring(0, t) + "...";
+          // } else {
+          //   return s;
+          // }
+        }
+
+
+    </script>
+    
+    
     <script src="{% static 'js/admindash.js' %}" type="text/javascript"></script>
     <script src="{% static 'assets/js/core/jquery.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
