--- a/onlinenotes/templates/onlinenotes/searchnotes.html
+++ b/onlinenotes/templates/onlinenotes/searchnotes.html
@@ -53,6 +53,13 @@
             
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+            <a href="{% url 'searchbook' %}" class="nav-link">
+              <i class="fa fa-book" aria-hidden="true"></i>
+              <span class="nav-link-text">Search Book</span>
+            </a>
+            
+          </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
             <a href="{% url 'createnotes' user.id %}" class="nav-link">
               <i class="fa fa-fw fa-file" aria-hidden="true"></i>
               <span class="nav-link-text">Create Notes</span>
