--- a/onlinenotes/templates/onlinenotes/searchuser.html
+++ b/onlinenotes/templates/onlinenotes/searchuser.html
@@ -46,6 +46,20 @@
             </a>
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+            <a href="{% url 'changepass' user.id %}" class="nav-link">
+              <i class="fa fa-key" aria-hidden="true"></i>
+              <span class="nav-link-text">Change Password</span>
+            </a>
+            
+          </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+            <a href="{% url 'searchbook' %}" class="nav-link">
+              <i class="fa fa-book" aria-hidden="true"></i>
+              <span class="nav-link-text">Search Book</span>
+            </a>
+            
+          </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-wrench"></i>
               <span class="nav-link-text">Notes</span>
